--- a/css/project.css
+++ b/css/project.css
@@ -1,7 +1,7 @@
 h2 {
     font-size: 1em;
     color: #484848;
-    padding: 1em 0;
+    padding: 1em 0 0.5em 0;
 }
 
 h3 {
@@ -52,7 +52,7 @@ footer {
 
 .info p {
     color: #555555;
-    margin: 0 0 0.2em 0;
+    margin: 0 0 0.1em 0;
 }
 
 .banner-container {
@@ -82,25 +82,31 @@ footer {
     text-align: left;
 }
 
-@media (min-width: 66.1em) { .content { padding-left: 25%;}}
-@media (max-width: 66.1em) { .content { padding-left: 12.5%; }}
+@media (min-width: 66.1em) { .content { padding-left: 25%; padding-right: 16.66666667vw;}}
+@media (max-width: 66.1em) { .content { padding-left: 12.5%; padding-right: 12.5vw;}}
     
-@media (min-width: 66.1em) { .context p { max-width: 41.6666666667vw; }}
-@media (max-width: 66.1em) { .context p { max-width: 100%; margin-bottom: 3em;}}
+@media (min-width: 66.1em) { .content p { max-width: 41.6666666667vw; }}
+@media (max-width: 66.1em) { .content p { max-width: 100%; margin-bottom: 3em;}}
 
+
+/*
 @media (min-width: 66.1em) { 
-    .context, .analysis, .reflection { padding-right: 16.66666667vw; /* 2/12 */ }
+    .context, .analysis, .reflection { padding-right: 16.66666667vw;  2/12  }
 }
+*/
+/*
 @media (max-width: 66.1em) { 
-    .context, .analysis, .reflection { padding-right: 12.5vw; /* 1/8 */ }
+    .context, .analysis, .reflection { padding-right: 12.5vw;  1/8  }
 }
+*/
+
 
 .analysis, .wireframe, .reflection {
     margin-top: 5em;
 }
 
-@media (min-width: 66.1em) { .analysis-content { flex: 3 3 42.8571429%; /* 3/7 */ }}
-@media (max-width: 66.1em) { .analysis-content { flex: 1 1 100%; /* 4/4 */ }}
+/*@media (min-width: 66.1em) { .analysis-content { flex: 3 3 42.8571429%;  3/7  }}*/
+/*@media (max-width: 66.1em) { .analysis-content { flex: 1 1 100%;  4/4  }}*/
 
 .insights {
     margin: 2.5em 0 3em 0;
@@ -112,7 +118,7 @@ footer {
 
 .spacer {
     text-align: center;
-    margin: 3em 0;
+    margin: 2em 0;
 }
 
 /** LIGHTBOX MARKUP written by Gregory Shier https://codepen.io/gschier/pen/HCoqh **/
