--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ p a:active, p a:focus, p a:hover {
 
 p {
     line-height: 1.5em;
+    font-size: 0.95em;
     margin-bottom: 1em;
 }
 
@@ -187,8 +188,6 @@ img {
 
 .nav {
     position: fixed;    
-    right: 0;
-    text-align: right;
     
     display: -webkit-flex;
     display: -ms-flex;
@@ -201,8 +200,17 @@ img {
     justify-content: space-around;
 }
 
-@media (min-width: 66.1em) { .nav {padding-right: 8.33333333%; /* 1/12 */ }}
-@media (max-width: 66.1em) { .nav {padding-right: 12.5%; /* 1/8 */ }}
+@media (min-width: 66.1em) { .nav {
+    padding-left: 91.97%; /* 11/12 */ 
+    left: 0;
+    text-align: left;
+    }}
+    
+@media (max-width: 66.1em) { .nav {
+    padding-right: 12.5%; /* 1/8 */ 
+    right: 0;
+    text-align: right;
+    }}
 
 .nav a {
     flex: 1 1 100%;
