--- a/styleguide/css/main.css
+++ b/styleguide/css/main.css
@@ -109,7 +109,8 @@ p a:active, p a:focus, p a:hover {
 }
 
 p {
-    line-height: 1.5em;
+    line-height: 1.5em;    
+    font-size: 0.95em;
     margin-bottom: 1em;
 }
 
