--- a/css/peak.css
+++ b/css/peak.css
@@ -48,9 +48,10 @@
 }
     
 .proj-footer {
-    background-image: url(../img/refuge-footer.jpg);
+/*    background-image: url(../img/refuge-footer.jpg);*/
+    background-color: #7289DA;
 }
 
 .proj-footer .text h2 {
-    color: #FFBE83;
+    color: #ffffff;
 }
