--- a/styleguide/css/main.css
+++ b/styleguide/css/main.css
@@ -192,8 +192,6 @@ img {
 
 .nav {
     position: fixed;    
-    right: 0;
-    text-align: right;
     
     display: -webkit-flex;
     display: -ms-flex;
@@ -206,8 +204,17 @@ img {
     justify-content: space-around;
 }
 
-@media (min-width: 66em) { .nav {padding-right: 8.33333333%; /* 1/12 */ }}
-@media (max-width: 66em) { .nav {padding-right: 12.5%; /* 1/8 */ }}
+@media (min-width: 66.1em) { .nav {
+    padding-left: 91.97%; /* 11/12 */ 
+    left: 0;
+    text-align: left;
+    }}
+    
+@media (max-width: 66.1em) { .nav {
+    padding-right: 12.5%; /* 1/8 */ 
+    right: 0;
+    text-align: right;
+    }}
 
 .nav a {
     flex: 1 1 100%;
