--- a/styleguide/css/main.css
+++ b/styleguide/css/main.css
@@ -10,17 +10,23 @@
 
 html {
     background-color: #e4e4e4;
-    max-width: 96em;
-    margin: auto;
-    
-    background-size: 24em 24em;
-    background-image: linear-gradient(90deg, #C9C9C9 0.1px, rgba(48, 48, 48, 0) 1px);
-    background-position: left;
+    max-width: 108em;
+    margin: auto;    
 }
 
 body {
     font-family: Helvetica, sans-serif;
     color: #1d1d1d;
+    
+    background-size: 25% 100%;
+    background-image: linear-gradient(90deg, #C9C9C9 0.1px, rgba(48, 48, 48, 0) 1px);
+    border-right: solid 1px #C9C9C9;
+    background-position: left;
+    margin: 0 4em;
+}
+
+.salmon {
+    color: #FF6275;
 }
 
 h1, h2 {
@@ -100,25 +106,33 @@ img {
 }
 
 .logo a {
-    color: #000000;
+    color: #1d1d1d;
     text-decoration: none;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 1.75em;
+    letter-spacing: -0.03em;
 }
 
 .name {
     flex: 1 1;
-    text-align: center;
-    font-weight: bold;
+    text-align: left;
+    text-transform: capitalize;
+    letter-spacing: 0.15px;
+    padding: 1em;
+    margin-right: auto;
 }
 
 .name a {
-    color: #1d1d1d;
+    color: #9c9c9c;
     text-decoration: none;
 }
 
+.name a:active, .name a:hover, .name a:focus {
+    color: #1d1d1d;
+}
+
 .nav {
-    flex: 1 1;
+    flex: 2 1;
     text-align: right;
 }
 
@@ -127,6 +141,7 @@ img {
     
     color: #9c9c9c;
     text-decoration: none;
+    letter-spacing: 1px;
     padding: 1em;
 }
 
@@ -642,7 +657,14 @@ footer {
 
 .proj {
     width: 75%;
+    padding-bottom: 0.5em;
     margin-bottom: 6em;
+}
+
+.proj:hover {
+    background-color: rgba(137, 165, 237, 0.2);
+/*    background-color: rgba(51, 108, 255, 0.1);*/
+
 }
 
 .proj img {
@@ -672,11 +694,11 @@ footer {
     margin-top: 0;
 }
 
-.proj-info a p {
+.proj-info p {
     color: #1d1d1d;
 }
 
-.tags {
+.proj-info .tags {
     font: "Poppins", sans-serif;
     font-weight: medium;
     color: #9C9C9C;
