--- a/css/what.css
+++ b/css/what.css
@@ -18,6 +18,55 @@
     }
 }
 
+.proj {
+    width: 75%;
+    padding-bottom: 0.5em;
+    margin-bottom: 6em;
+}
+
+.proj:hover {
+    background-color: rgba(137, 165, 237, 0.2);
+/*    background-color: rgba(51, 108, 255, 0.1);*/
+
+}
+
+.proj img {
+    width: 100%;
+    height: 24em;
+}
+
+.proj-info {
+    width: 100%;
+    
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+
+    flex-wrap: -webkit-wrap;
+    flex-wrap: -ms-wrap;
+    flex-wrap: wrap;
+    
+    flex-flow: row;
+
+    justify-content: flex-start;
+}
+
+.proj-info h2, .proj-info p {
+    flex: 1 1 33.3%;
+    padding-right: 1.5em;
+    margin-top: 0;
+}
+
+.proj-info p {
+    color: #1d1d1d;
+}
+
+.proj-info .tags {
+    font: "Poppins", sans-serif;
+    font-weight: medium;
+    color: #9C9C9C;
+}
+
 .project {
     text-align: center;
     
