Index Mobile Breakpoints Added

--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,7 @@ img {
 }
 
 .main-footer {
+    padding: 2em 0;
     box-shadow: inset 2px 5px 10px rgba(58, 89, 118, 0.08);
         
     display: -webkit-flex;
@@ -182,9 +183,6 @@ img {
     justify-content: flex-start;
 } 
 
-@media (min-width: 66em) {.main-footer {padding: 2em 8.333333333%; }}
-@media (max-width: 66em) {.main-footer {padding: 2em 12.5%; }}
-
 .main-footer h2 {
     font-size: 0.9rem;
     font-weight: bold;
@@ -197,27 +195,35 @@ img {
     margin: auto;
 }
 
-.links { 
-    flex: 1 1 100%;
-    padding-top: 2.5em;
-}
+
 
 @media (min-width: 66em) {
     .contact {
-        flex: 2 2 33.3333333%
+        flex: 1 4 25%;
+        margin-bottom: 1em;    
     }
     .status {
-        flex: 3 3 50%;
+        flex: 1 4 25%;
+        margin-bottom: 1em;
+    }
+    .links { 
+        flex: 2 4 50%;
+        margin-bottom: 1em;
     }
 }
 
 @media (max-width: 66em) {
     .contact {
         flex: 1 1 100%;
-        margin-bottom: 1em;
+        
     }
     .status {
         flex: 1 1 100%;
+        padding-top: 2em;
+    }
+    .links { 
+        flex: 1 1 100%;
+        padding-top: 2em;
     }
 }
 
