--- a/css/what.css
+++ b/css/what.css
@@ -23,7 +23,6 @@
 
 .proj img {
     width: 100%;
-    height: 24em;
 }
 
 .proj-info {
@@ -61,6 +60,11 @@
         padding-right: 1em;
         margin-top: 0;
     }
+    
+    .proj img {
+        height: 24em;
+    }
+
 }
 
 @media (max-width: 69em) {
@@ -72,6 +76,10 @@
         flex: 1 1 100%;
         padding-right: 1em;
         margin-top: 0;
+    }
+    
+    .proj img {
+        height: 18em;
     }
 }
 
