--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,16 @@ h1, h2 {
     margin: 0;
 }
 
-h1 {
-    font-size: 4em;
+@media (min-width: 31em) {
+    h1 {
+        font-size: 4em;
+    }
+}
+
+@media (max-width: 31em) {
+    h1 {
+        font-size: 2.5em;
+    }
 }
 
 h2 {
@@ -85,7 +93,6 @@ img {
 .nav-bar {
     padding-top: 2em;
     padding-bottom: 2em;
-    align-items: baseline;
 }
 
 .logo {
@@ -128,8 +135,16 @@ img {
 }
 
 .nav {
-    flex: 2 1;
+    flex: 1 1;
     text-align: right;
+    
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+
+    flex-wrap: -webkit-wrap;
+    flex-wrap: -ms-wrap;
+    flex-wrap: wrap;
 }
 
 .nav a {
@@ -138,8 +153,35 @@ img {
     color: #9c9c9c;
     text-decoration: none;
     letter-spacing: 1px;
-    padding: 1em;
 }
+
+@media (min-width: 31em) {
+    .nav-bar {
+        align-items: baseline;
+    }
+    
+    .nav {
+        flex-flow: row;
+        justify-content: flex-end;
+    }
+    .nav a {
+        padding: 1em;
+    }
+}
+
+@media (max-width: 31em) {
+    .nav-bar {
+        align-items: center;
+    }
+    
+    .nav {
+        flex-flow: column;
+    }
+    .nav a {
+        padding: 0.5em;
+    }
+}
+
 
 .nav a:active, .nav a:focus, .nav a:hover {
     color: #1d1d1d;
