--- a/css/who.css
+++ b/css/who.css
@@ -1,214 +1,161 @@
-.bio {
-    width: 100%;
-    padding: 0 16.7777777%;
-}
-
-.bio img {    
-    margin-bottom: auto;
-}
-
-.bio p {
-    
-}
-
-@media (min-width: 66em) { 
-    .bio img {
-        flex: 1 1 50%;
-        
-        max-width: 50%;
-        max-height: 50%;
-
-        min-width: 50%;
-        min-height: 50%;
+@media (min-width: 69em) {
+    .bio {
+        width: 100%;
     }
-    
-    .bio p {
-        flex: 1 1 50%;
-        padding-left: 8.33333333vw;
-    }
-}
 
-@media (max-width: 66em) { 
-    .bio img {
+    .bio img {    
         flex: 1 1 100%;
-        
-        max-width: 50vw;
-        max-height: 50vw;
-
-        min-width: 50vw;
-        min-height: 50vw;
+        width: 75%;
+        margin-bottom: 4em;
     }
     
-    .bio p {
-        flex: 1 1 100%;
-        margin-top: 3em;
-        max-width: 50vw;
+    .column {
+        flex-direction: column;
+        flex: 1 1 25%;
     }
-}
 
-.manifesto {
-    width: 100%;
-    padding: 0 16.7777777vw;
-    margin: 8em 0; 
-}
+    .about {
+        width: 50%;
+        margin-top: 2em;
+    }
 
-@media (min-width: 68.625em) { 
-    .manifesto h2 {
-        flex: 3 12 25%;
-        padding-right: 4.16666666667vw;
-        
-        font-size: 2em;
+    .intro, .principles {
+        padding-right: 1.5em;
     }
-    
-    .manifesto .principles {
-        flex: 5 12 41.666666666%;
+
+    .principles h3 {
+        margin-bottom: 1.25em;
     }
-    
-    .principles .principle {     
+
+    .principles h4 {
+        padding-right: 0.5em;
+    }
+
+    .principle {
         display: -webkit-flex;
         display: -ms-flex;
         display: flex;
-            
-        align-items: flex-start;
 
         flex-wrap: -webkit-wrap;
         flex-wrap: -ms-wrap;
         flex-wrap: wrap;
-        
-        margin-bottom: 3em;
-    }
-    
-    .principle h3 {
-        flex: 2 5 40%;
-        padding-right: 4.125125125125vw;
-        
-        color: #FF6275;
-        font-size: 2em;
-    }
-    
-    .principle p {
-        flex: 3 5 60%;
-    }
-}
 
-@media (max-width: 68.625em) { 
-    .manifesto h2 {
-        flex: 1 1 100%;
-/*        padding-right: 8.33333333333vw;*/
-        
-        font-size: 2em;
-        margin-bottom: 2em;
-    }
-    
-    .manifesto .principles {
-        flex: 5 12 41.666666666%;
-    }
-    
-    .principles .principle {     
-        display: -webkit-flex;
-        display: -ms-flex;
-        display: flex;
-            
-        align-items: flex-start;
+        flex-direction: column;
 
-        flex-wrap: -webkit-wrap;
-        flex-wrap: -ms-wrap;
-        flex-wrap: wrap;
-        
-        margin-bottom: 3em;
-    }
-    
-    .principle h3 {
-        flex: 2 5 40%;
-        padding-right: 4.125125125125vw;
-        
-        color: #FF6275;
-        font-size: 2em;
-    }
-    
-    .principle p {
-        flex: 3 5 60%;
-    }
-}
-
-@media (max-width: 66em) { 
-    .manifesto h2 {
-        flex: 1 1 100%;
-        
-        font-size: 2em;
-        max-width: 50vw;
-        margin-bottom: 2em;
-    }
-    
-    .manifesto .principles {
-        flex: 5 12 41.666666666%;
-        max-width: 50vw;
-    }
-    
-    .principles .principle {     
-        display: -webkit-flex;
-        display: -ms-flex;
-        display: flex;
-            
-        align-items: flex-start;
-
-        flex-wrap: -webkit-wrap;
-        flex-wrap: -ms-wrap;
-        flex-wrap: wrap;
-        
-        margin-bottom: 3em;
-    }
-    
-    .principle h3 {
-        flex: 2 5 40%;
-        padding-right: 4.125125125125vw;
-        
-        color: #FF6275;
-        font-size: 2em;
-    }
-    
-    .principle p {
-        flex: 3 5 60%;
-    }
-}
-
-@media (max-width: 55.25em) { 
-    .manifesto h2 {
-        flex: 1 1 100%;
-        
-        font-size: 2em;
-        max-width: 50vw;
-        margin-bottom: 2em;
-    }
-    
-    .manifesto .principles {
-        flex: 5 12 41.666666666%;
-        max-width: 50vw;
-    }
-    
-    .principles .principle {     
-        display: -webkit-flex;
-        display: -ms-flex;
-        display: flex;
-            
-        align-items: flex-start;
-
-        flex-wrap: -webkit-wrap;
-        flex-wrap: -ms-wrap;
-        flex-wrap: wrap;
-        
-        margin-bottom: 3em;
-    }
-    
-    .principle h3 {
-        flex: 1 1 100%;
         margin-bottom: 1em;
-        
-        color: #FF6275;
-        font-size: 2em;
+    }
+
+    .principle h3, .principle p {
+        flex: 1 1 50%
+    }
+}
+
+@media (max-width: 69em) {
+    .bio {
+        width: 100%;
+    }
+
+    .bio img {    
+        flex: 1 1 100%;
+        width: 100%;
+        margin-bottom: 4em;
     }
     
-    .principle p {
+    .column {
+        flex-direction: column;
+        flex: 1 1 25%;
+    }
+
+    .about {
+        width: 100%;
+        margin-top: 2em;
+    }
+
+    .intro, .principles {
+        padding-right: 2em;
+    }
+
+    .principles h3 {
+        margin-bottom: 1.25em;
+    }
+
+    .principles h4 {
+        padding-right: 0.5em;
+    }
+
+    .principle {
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+
+        flex-wrap: -webkit-wrap;
+        flex-wrap: -ms-wrap;
+        flex-wrap: wrap;
+
+        flex-direction: column;
+
+        margin-bottom: 1em;
+    }
+
+    .principle h3, .principle p {
+        flex: 1 1 50%
+    }
+}
+
+@media (max-width: 40em) {
+    .bio {
+        width: 100%;
+    }
+
+    .bio img {    
         flex: 1 1 100%;
+        width: 100%;
+        margin-bottom: 4em;
+    }
+    
+    .row {
+        flex-direction: column;
+    }
+    
+    .column {
+        flex-direction: column;
+        flex: 1 1 25%;
+    }
+
+    .about {
+        width: 100%;
+        margin-top: 2em;
+    }
+    
+
+    .intro, .principles {
+        padding-right: 2em;
+        margin-bottom: 4em;
+    }
+
+    .principles h3 {
+        margin-bottom: 1.25em;
+    }
+
+    .principles h4 {
+        padding-right: 0.5em;
+    }
+
+    .principle {
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+
+        flex-wrap: -webkit-wrap;
+        flex-wrap: -ms-wrap;
+        flex-wrap: wrap;
+
+        flex-direction: column;
+
+        margin-bottom: 1em;
+    }
+
+    .principle h3, .principle p {
+        flex: 1 1 50%
     }
 }
